# whisper-at

./: .gitignore  pyproject.toml
data/: youtube_8S0FDjFBj8o.csv  youtube_9kxL9Cf46VM.csv  youtube_AzIhz0kE8SA.csv  youtube_Fkd9TWUtFm0.csv  youtube_QFqokhs47l0.csv  youtube_a3dmC2nB-vE.csv  youtube_azRl1dI-Cts.csv  youtube_hFcQpNr_KA4.csv  youtube_vVsXO9brK7M.csv  youtube_vvi1hCoFAgo.csv
data/processed_data/: audioset_train.json  audioset_val.json  class_labels_indices_extended.csv  combined_val.json  sonyc_new_class_mapping.json  sonyc_new_test.json  sonyc_new_train.json  sonyc_new_train_weight.csv  sonyc_new_val.json  sonyc_test.json  sonyc_test_filtered.json  sonyc_test_filtered_ohe.json  sonyc_train.json  sonyc_train_weight.csv  sonyc_val.json
notebook/: training_stat_viewer.ipynb
package/whisper-at/: requirements.txt  setup.py
package/whisper-at/whisper_at/: __init__.py  model.py  transcribe.py
package/whisper-at/whisper_at/assets/: label_name_dict.json
script/: convert_audioset_json.py  convert_sonyc_ust_to_ohe.py  extract_hf_audio_by_index.py  extract_hf_audioset.py  extract_sonyc_features.py  filter_sonyc_labels.py  find_small_files.py  match_labels_audioset_sonyc.py  merge_audioset_sonyc_json.py  process_sonyc_new_classes_only.py  process_sonyc_ust_csv.py  semantic_sonyc_to_audioset_mapping.json
src/whisper_at_train/: dataloader_feat.py  evaluate_pretrained_whisper_at.py  run.py  run_as_sonyc.sh  run_as_soync.sh  run_combined_training.sh  traintest.py
