[project]
name = "whisper-at"
version = "0.1.0"
description = ""
authors = [
    {name = "Taemyung Heo",email = "taemyung.heo@gpters.org"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11" # requires-python을 여기로 이동
sentence-transformers = "^4.1.0"
pandas = "^2.2.3"
scikit-image = "^0.25.2"
openai-whisper = "^20240930"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
