[project]
name = "whisper-at"
version = "0.1.0"
description = ""
authors = [
    {name = "Taemyung Heo",email = "taemyung.heo@gpters.org"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10" # requires-python을 여기로 이동
sentence-transformers = "^4.1.0"
pandas = "^2.2.3"
scikit-image = "^0.25.2"
openai-whisper = "^20240930"
torchaudio = "^2.7.0"
datasets = "^3.6.0"
soundfile = "^0.13.1"
librosa = "^0.11.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
